Fixed spacing on open mobile menu, added box-shadow to border

--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -1,6 +1,7 @@
 header {
   background-color: var(--blue);
   border-bottom: solid 1px var(--pink);
+  box-shadow: 0px 0px 8px var(--pink);
   height: 80px;
   justify-content: space-between;
   align-items: center;
@@ -114,9 +115,10 @@ header {
   height: calc(100vh - 80px);
   left: 0;
   position: absolute;
-  top: 80px;
+  top: 81px;
   width: 100%;
   padding: 0;
+  margin: 0;
 }
 
 .mobile-nav-link {
